--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-slate-50">
     <div id="root"></div>
     <!-- Viteのメインエントリーポイント（srcフォルダの中のmain.jsx）を読み込む -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
 </body>
 
 </html>
